# XSvr

./: CMakeLists.txt  README.md
src/: main.cpp
src/common/: CMakeLists.txt
src/common/base/: XBase.h  XSvrBase.hpp
src/common/net/: XNetCallBack.hpp  XNetDefine.h
src/common/third_help/: XEventClient.hpp  XEventServer.hpp  XHiRedisHelper.hpp  XMysqlHelper.hpp  XProtobufDispather.hpp  XSpdLogHelper.hpp
src/common/utility/: XMsgQueue.hpp  XNoCopyable.hpp  XSingleton.hpp
src/logic/: XSvrLogic.hpp
src/protocol/: CMakeLists.txt  TestMsg.pb.cc  TestMsg.pb.h  TestMsg.proto
src/test/: TestXMsgQueue.h
src/third/: CMakeLists.txt
src/third/fmt/: CMakeLists.txt  fmt.h
src/third/libevent/: CMakeLists.txt
src/third/libevent/include/event2/: listener.h
src/third/probuf_3.6.1/: CMakeLists.txt
src/third/protobuf/: CMakeLists.txt
src/third/spdlog/: CMakeLists.txt
